# OSAInt

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
src/: osaint.py
src/services/: deepseek.py  haveibeenpwned.py  proxycurl.py  scrapedo.py
src/util/: scraper.py
web/: app.py
web/static/: style.css
web/templates/: index.html  results.html  select_person.html
